deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanlog-service
  namespace: cleanlog
spec:
  selector:
    app: cleanlog
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
