deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanlog-ingress
spec:
  rules:
    - host: cleanlog.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cleanlog-server
                port:
                  number: 80
